--- a/00-summary.Rmd
+++ b/00-summary.Rmd
@@ -1,30 +1,13 @@
 # Summary {.unnumbered}
 
-Development
+While being one of the oldest biological disciples, developmental biology and in particular embryonic development in 2020 still offers many fundamental and unsolved questions. Underlying development is a very complex network of cellular interactions, which again underlie a seemingly indefinitely network of molecular reactions. Throughout development, a cells path along this network is defined by a combination of physical and chemical cues. In order to form an organ, cells that are initially uniform need to take up specialized functions and tasks. One key aspect in cellular identity is its form, which e.g. defines how susceptible the cell may be to intercellular-signaling. Shape therefore can tell us something about a cells current condition. 
 
-In biology differentiation describes the continuous process of cells adapting to their everchanging environment during advancing development, whereby adopting specialized function. For developmental biology, which as a scientific discipline originates from embryology, the central interest is to understand how initially inanimate matter is able to organize itself to such complex structures we see in living matter at different levels of organismal hierarchy while ensuring a robust developmental plan. Using the marble analogy, studying developmental biology can be thought of tracking multiple cells as they roll down the valley while observing and testing how interactions between them might change their fate. With rising numbers of cells and differentiated tissue a shape and body axes begin to emerge that for the earliest developmental stages is highly similar across certain phyla and only begins to diversify at later developmental stages , which reflects our evolutionary ancestry.
+To investigate developmental processes a model oragnism is needed that is suits the specific question. In my case, I was interested to understand better how cellular shape and geometry impacts downstream cell and organ development. Meaning: What happens if a cell can' transition take up a specific shape? How does it affect tissue structure? How does it affect further development? Amonst other benefits, the zebrafish _Danio rerio_ is, due to its natural transparency (during embryonic development), an ideal model organism. A particularly good model organ again is the Lateral Line System, since its developing just beneath a thin one cell layer of skin and therefore offers optimal conditions to be accessed by a light microscope. The Lateral Line System is common to common to all aquatic vertebrates and evolutionary remnants could even be found in humans. As its name already tells, the system is laterally positioned. It is comprised of many small organs, a few microns in size, that are interlinked by neurons and project hair cells through the skin. Therefore allowing the organism to sense water movements when the hair cells get deflected. Development of the primary lateral line takes about 20 hours during which a cluster of initially about 150 cells, the posterior lateral line primordium (pLLP), migrates from the anterior (head) to the posterior (tail) while depositing cell clusters in a regular pattern. After deposition those clusters will eventually mature and develop the hair cells necessary for the organ to function. Before the clusters are deposited, cells in the back of the pLLP organize radially into rosette like assemblies. Cells in those rosettes are connected with their apices. To get into an arrangement like this the cells need to apically constrict, which forces them into a wedge-like shape.
 
-Apical Constriction
+From previous studies done in the lab we have identified a protein called Shroom3 to be necessary for the cells to take up this shape. Specifically, it was known from morpholino induced knock-downs of _shroom3_ rosette assembly was disturbed. To study the effects of Shroom3 on lateral line development, a TALEN induced mutant was generated. Literature on development of the lateral line suggests that in order for a cell cluster to be deposited from the pLLP, rosette formation is a key requirement. Therefore our expectation from the mutant was that the amount of clusters deposited was _at least_ significantly reduced. To our surprise, when we first inspected the end of migration lateral line phenotype we found many individuals with a significant increase in cell clusters deposited. This made us re-think Shroom3's role during rosette assembly and the processes its involved in. Furthermore, to accurately quantify the morphogenic processes Shroom3 is involved in I developed a new toolset that significantly improved and facilitated my research.
 
-Apical constriction is a cell morphogenetic process manifest by an active apical narrowing, making the cell appear bottle or wedge shaped.
+Here we show that _Danio rerio_ Shroom3 is necessary to counteract pre-mature cluster deposition and therefore to maintain the range of clusters deposited, independent of proliferation. Furthermore we show that apical constriction and rosetization is not depleted in _shroom3_ deficient embryos, but that larger rosettes are fragmented into many smaller ones. Finally, we give an outlook on how absense of Shroom3 and absense of morphological chages may deregulate gene transcription by elevating the levels _atoh1a_, a transcription factor necessary for hair cell development.
 
-Developmental processes that involve AC are (1) In the following, three pathways are introduced that play major roles in embryonic development. (2) At least one developmental process requires a locally confined and very enriched source of signaling molecules. (3) It was shown that rosette formation in the lateral line primordium is an important morphological feature for a lumen to form on top of the rosette which, filled with FGF, acts as a locally enriched source of FGF signaling.
+To compare data points between embryos in space and time, a precision of sample mounting and measurement taking was necessary that was not available. For sample mounting I developed a new method that is based on 3D agarose gel and that increases (1) the number of embryos that can be mounted and imaged at one (2) that is more gentle to the embryos and (3) that speeds up the imaging process significantly. In addition, for subseqent image analysis I developed a number of apps for 2- and 3-D analysis that automate the process and therefore make the results much more reproducible and the analysis much more efficient.
 
-Notch signaling gives cells the ability to self-organize and controls various developmental and homeostatic processes that involve patterning, such as sensory hair cell formation, branched arterial networks or organ morphogenesis. Additionally, the strength of the signal increases further where cells are tightly opposed, such as sites of apical constriction. 
-
-To study embryonic development the fresh water fish Danio rerio also known as eng: zebrafish or ger: zebrabärbling has become an important model organism over the recent years. Green- or Red fluorescent protein and observation of pre-larval stages, where the embryo is still transparent, offers enormous possibilities to address interesting and long standing open questions.
-
-Developmental Stages
-
-Each NM is first deposited as a premature cluster of about 30 cells from a migrating cell-aggregate called the posterior lateral line primordium. To ensure the development of a functional organ, several fundamental biological processes like cell migration, morphogenesis, proliferation and cell polarization need to be integrated into the pLLP. An important breakthrough in LL research has been the development of a transgenic line expressing a membrane tethered GFP fusion protein that is expressed under the LL specific promotor of cldnb, which allowed for a much more detailed view and to observe lateral line development in vivo.
-
-Posterior Lateral Line Primordium
-
-Shroom3 in the pLLP While in all of the above-mentioned studies Shroom3 was the focus of interest, in zebrafish and most other model organisms there are four paralogs. A previous study performed by a lab-mate done on Shroom3 morphants in D.rerio indicates that Shroom3 is also necessary for AC and rosette formation in the migrating pLLP. Shroom3 is expressed in the pLLP from stages 24 – 48 hpf. shroom3 is expressed downstream of FGF signaling, which was confirmed via treatment with an FGFR1 inhibiting drug. Shroom3 localizes to rosette centers, which was accomplished by inserting a genetic construct where a shroom3-tagRFP fusion protein is under control of a heat-shock8 promotor into a cldnb:lyn-GFP transgenic line. This way they were able to ectopically express shroom3-tRFP and confirm its localization by confocal fluorescence microscopy.
-
-Based on these and previous results, the current model for apical constriction in the pLLP assumes that expression of shroom3 is induced by FGF signaling Shroom3 binds Rock and translocates it to the AJC to mediate phosphorylation of NMII which induces contraction of the actin network and AC. In conclusion the current understanding is that without Shroom3 AC can not take place and rosette formation does not occur, therefore NMs are not deposited. To achieve this, shroom3 was targeted using a genome editing system based on the Transcription activator-like effector nuclease.
-
-Open Questions and Motivation
-
-The LL phenotype at later stages revealed discrepancies with the current model of rosette formation and the role of Shroom3 during LL development. One aspect about LL development that still remains unclear are the exact factors that lead to cell cluster deposition. Using the Shroom3 mutants as a model system offers great potential to shed new light on organogenesis, the interplay between morphogenesis and cellular specification, epithelial rosette formation and neuromast deposition.
-
+My results and methodology demonstrate the importance of morphology in guiding developmental processes and how rather small morphological changes on the cellular level can impact further development significantly. My work also shows how howperful modern genetics, imaging and image analysis is and how diverse they are in terms of range of questions they are capable of answering. The methods and tools I developed prepare the ground for at least three quarters of the analyses I carried out and together with the documentation and data I provide, they are highly reproducible. Unfortunately, reproducibility in many publications is not a core aspect. However, it should be a main focus for _any_ study since reproducibility is what solidifies the scientific results. In that regard I am especially happy that one of my developments, an improved sample preparation method, is already used by many different labs all over the world helping them to make their results more reproducible.
