--- a/00-zusammenfassung.Rmd
+++ b/00-zusammenfassung.Rmd
@@ -1,31 +1,13 @@
 # Zusammenfassung {.unnumbered}
 
-Entwicklung
+Obwohl sie eine der ältesten biologischen Disziplinen ist, bietet die Entwicklungsbiologie und insbesondere die Embryonalentwicklung im Jahr 2020 noch viele grundlegende und ungelöste Fragen. Der Entwicklung liegt ein sehr komplexes Netzwerk von zellulären Interaktionen zugrunde, die wiederum einem scheinbar unendlichen Netzwerk von molekularen Reaktionen untergeordnet sind. Während der gesamten Entwicklung wird der Weg einer Zelle entlang dieses Netzwerks durch eine Kombination von physikalischen und chemischen Hinweisen definiert. Um ein Organ zu bilden, müssen Zellen, die zunächst einheitlich sind, spezialisierte Funktionen und Aufgaben übernehmen. Ein Schlüsselaspekt der zellulären Identität ist ihre Form, die z.B. definiert, wie empfänglich die Zelle für interzelluläre Signale sein kann. Die Form kann uns also etwas über den aktuellen Zustand einer Zelle sagen. 
 
-In der Biologie beschreibt Differenzierung den kontinuierlichen Prozess der Anpassung von Zellen an ihre sich ständig verändernde Umgebung während der fortschreitenden Entwicklung, wobei sie spezialisierte Funktionen übernehmen. Für die Entwicklungsbiologie, die als wissenschaftliche Disziplin ihren Ursprung in der Embryologie hat, ist es von zentralem Interesse zu verstehen, wie sich zunächst unbelebte Materie zu solch komplexen Strukturen organisieren kann, wie wir sie in lebender Materie auf verschiedenen Ebenen der organismischen Hierarchie sehen, während sie gleichzeitig einen robusten Entwicklungsplan gewährleistet. Mit Hilfe der Marmoranalogie kann man sich das Studium der Entwicklungsbiologie so vorstellen, dass man mehrere Zellen verfolgt, wenn sie das Tal hinunterrollen, während man beobachtet und testet, wie Interaktionen zwischen ihnen ihr Schicksal verändern könnten. Mit steigender Anzahl von Zellen und differenziertem Gewebe beginnen sich eine Form und Körperachsen herauszubilden, die für die frühesten Entwicklungsstadien über bestimmte Phyla sehr ähnlich sind und sich erst in späteren Entwicklungsstadien zu diversifizieren beginnen, was unsere evolutionäre Abstammung widerspiegelt.
+Um Entwicklungsprozesse zu untersuchen, benötigt man ein Modellorganismus, der zur spezifischen Fragestellung passt. In meinem Fall war ich daran interessiert, besser zu verstehen, wie sich die Form und Geometrie einer Zelle auf die nachfolgende Zell- und Organentwicklung auswirkt. Im Klartext bedeutet dies: Was passiert, wenn eine Zelle eine bestimmte Form annehmen kann? Wie wirkt sich das auf die Gewebestruktur aus? Wie wirkt es sich auf die weitere Entwicklung aus? Der Zebrafisch _Danio rerio_ ist unter anderem aufgrund seiner natürlichen Transparenz (während der Embryonalentwicklung) ein idealer Modellorganismus. Ein besonders gutes Modellorgan ist wiederum das Seitenliniensystem, da es sich direkt unter einer dünnen, einzelligen Hautschicht entwickelt und somit optimale Bedingungen für den Zugang mit einem Lichtmikroskop bietet. Das Seitenliniensystem ist allen aquatischen Wirbeltieren gemeinsam, und evolutionäre Überbleibsel konnten sogar beim Menschen gefunden werden. Wie der Name schon sagt, ist das System seitlich angeordnet. Es besteht aus vielen kleinen, nur wenige Mikrometer großen Organen, die durch Neuronen miteinander verbunden sind und Haarzellen durch die Haut projizieren. Dadurch kann der Organismus Wasserbewegungen wahrnehmen, wenn die Haarzellen abgelenkt werden. Die Entwicklung der primären Seitenlinie dauert etwa 20 Stunden, in denen ein Cluster von anfänglich etwa 150 Zellen, das posteriore Seitenlinienprimordium (pLLP), vom vorderen (Kopf) zum hinteren (Schwanz) wandert und dabei Zellcluster in einem regelmäßigen Muster ablagert. Nach der Ablagerung reifen diese Cluster schließlich aus und entwickeln die für die Funktion des Organs notwendigen Haarzellen. Bevor die Cluster abgelagert werden, organisieren sich die Zellen im hinteren Teil des pLLP radial zu rosettenartigen Ansammlungen. Die Zellen in diesen Rosetten sind mit ihren Apizes verbunden. Um eine solche Anordnung zu erreichen, müssen sich die Zellen apikal zusammenziehen, was sie in eine keilförmige Form zwingt.
 
-Apikale Einschnürung
+Aus früheren Studien im Labor haben wir ein Protein namens Shroom3 identifiziert, das notwendig ist, damit die Zellen diese Form annehmen können. Insbesondere war aus Morpholino-induzierten Knock-Downs von _shroom3_ bekannt, dass die Rosettenmontage gestört ist. Um die Auswirkungen von Shroom3 auf die Seitenlinienentwicklung zu untersuchen, wurde eine TALEN-induzierte Mutante erzeugt. Die Literatur über die Entwicklung der Seitenlinie legt nahe, dass die Rosettenbildung eine wichtige Voraussetzung für die Ablage eines Zellhaufens aus dem pLLP ist. Daher war unsere Erwartung an die Mutante, dass die Menge der abgelagerten Cluster _zumindest_ deutlich reduziert ist. Zu unserer Überraschung fanden wir bei der ersten Untersuchung des End-of-Migration-Lateral-Line-Phänotyps viele Individuen mit einer signifikanten Zunahme an abgelagerten Zellclustern. Dies veranlasste uns, die Rolle von Shroom3 während der Rosettenmontage und die Prozesse, an denen es beteiligt ist, neu zu überdenken. Um die morphogenetischen Prozesse, an denen Shroom3 beteiligt ist, genau zu quantifizieren, habe ich ein neues Toolset entwickelt, das meine Forschung deutlich verbessert und erleichtert hat.
 
-Die Apikalverengung ist ein zellmorphogenetischer Prozess, der sich durch eine aktive apikale Verengung manifestiert und die Zelle flaschen- oder keilförmig erscheinen lässt.
+Hier zeigen wir, dass _Danio rerio_ Shroom3 notwendig ist, um der vorzeitigen Ablagerung von Clustern entgegenzuwirken und somit die Bandbreite der abgelagerten Cluster aufrechtzuerhalten, unabhängig von der Proliferation. Weiterhin zeigen wir, dass die apikale Konstriktion und Rosettenbildung in _Shroom3_ defizienten Embryonen nicht beeinträchtigt ist, sondern dass größere Rosetten in viele kleinere fragmentiert werden. Schließlich geben wir einen Ausblick darauf, wie das Fehlen von Shroom3 und das Fehlen von morphologischen Veränderungen die Gentranskription deregulieren kann, indem wir die Spiegel von _atoh1a_, einem für die Haarzellentwicklung notwendigen Transkriptionsfaktor, erhöhen.
 
-Entwicklungsprozesse, an denen die AC beteiligt ist, sind (1) Im Folgenden werden drei Wege vorgestellt, die in der Embryonalentwicklung eine wichtige Rolle spielen. (2) Mindestens ein Entwicklungsprozess erfordert eine lokal begrenzte und sehr angereicherte Quelle von Signalmolekülen. (3) Es konnte gezeigt werden, dass die Rosettenbildung in der Seitenlinie des Primordiums ein wichtiges morphologisches Merkmal für die Bildung eines Lumens auf der Rosette ist, das, gefüllt mit FGF, als lokal angereicherte Quelle von FGF-Signalmolekülen fungiert.
+Um Datenpunkte zwischen Embryonen räumlich und zeitlich vergleichen zu können, war eine Präzision der Probenmontage und Messaufnahme notwendig, die nicht vorhanden war. Für die Probenmontage habe ich eine neue Methode entwickelt, die auf 3D-Agarosegel basiert und die (1) die Anzahl der Embryonen, die montiert und abgebildet werden können, erhöht, (2) die schonender für die Embryonen ist und (3) die den Bildgebungsprozess deutlich beschleunigt. Darüber hinaus habe ich für die subseqente Bildanalyse eine Reihe von Apps für die 2- und 3-D-Analyse entwickelt, die den Prozess automatisieren und damit die Ergebnisse viel reproduzierbarer und die Analyse viel effizienter machen.
 
-Die Kerbsignalisierung gibt den Zellen die Fähigkeit zur Selbstorganisation und steuert verschiedene entwicklungsbiologische und homöostatische Prozesse, die eine Musterung beinhalten, wie z.B. die Bildung von Sinneshaarzellen, verzweigte arterielle Netzwerke oder die Organmorphogenese. Zusätzlich nimmt die Stärke des Signals dort weiter zu, wo die Zellen eng beieinander liegen, wie z.B. an Stellen mit apikaler Verengung. 
-
-Zur Untersuchung der Embryonalentwicklung hat sich der Süßwasserfisch Danio rerio, auch bekannt als eng: Zebrafisch oder ger: Zebrabärbling, in den letzten Jahren zu einem wichtigen Modellorganismus entwickelt. Das grün oder rot fluoreszierende Protein und die Beobachtung der prälarvalen Stadien, in denen der Embryo noch transparent ist, bietet enorme Möglichkeiten, interessante und seit langem offene Fragen zu klären.
-
-Entwicklungsstadien
-
-Jedes NM wird zunächst als ein vorzeitiges Cluster von etwa 30 Zellen aus einem wandernden Zellaggregat, dem so genannten posterioren lateralen Linienprimordium, abgelagert. Um die Entwicklung eines funktionellen Organs zu gewährleisten, müssen mehrere grundlegende biologische Prozesse wie Zellmigration, Morphogenese, Proliferation und Zellpolarisation in das pLLP integriert werden. Ein wichtiger Durchbruch in der LL-Forschung war die Entwicklung einer transgenen Linie, die ein membrangebundenes GFP-Fusionsprotein exprimiert, das unter dem LL-spezifischen Promotor von cldnb exprimiert wird, was eine viel detailliertere Ansicht und Beobachtung der Entwicklung der lateralen Linie in vivo ermöglichte.
-
-Posteriore Lateral-Linie Primordium
-
-Shroom3 im pLLP Während in allen oben erwähnten Studien Shroom3 im Mittelpunkt des Interesses stand, gibt es bei Zebrafischen und den meisten anderen Modellorganismen vier Gleichgesinnte. Eine frühere Studie, die von einem Laborkollegen an Shroom3-Morphanten in D.rerio durchgeführt wurde, deutet darauf hin, dass Shroom3 auch für die AC- und Rosettenbildung im wandernden pLLP notwendig ist. Shroom3 wird im pLLP ab den Stadien 24 - 48 hpf exprimiert. Shroom3 wird stromabwärts der FGF-Signalisierung exprimiert, was durch die Behandlung mit einem FGFR1-hemmenden Medikament bestätigt wurde. Shroom3 lokalisiert sich in Rosettenzentren, was durch Einfügen eines genetischen Konstrukts, bei dem ein Shroom3-tagRFP-Fusionsprotein unter der Kontrolle eines Hitzeschock8-Promotors steht, in eine cldnb:lyn-GFP-Transgenlinie erreicht wurde. Auf diese Weise gelang es ihnen, Shroom3-tRFP ektopisch zu exprimieren und seine Lokalisierung durch konfokale Fluoreszenzmikroskopie zu bestätigen.
-
-Basierend auf diesen und früheren Ergebnissen geht das aktuelle Modell für die apikale Konstriktion im pLLP davon aus, dass die Expression von shroom3 durch FGF-Signale induziert wird. Shroom3 bindet Rock und transloziert es an die AJC, um die Phosphorylierung von NMII zu vermitteln, die eine Kontraktion des Aktinnetzwerks und der AC induziert. Zusammenfassend lässt sich festhalten, dass ohne Shroom3 AC nicht stattfinden kann und keine Rosettenbildung stattfindet, weshalb keine NMs abgelagert werden. Um dies zu erreichen, wurde Shroom3 unter Verwendung eines Genom-Editierungssystems, das auf der Transkriptionsaktivator-ähnlichen Effektor-Nuklease basiert, ins Visier genommen.
-
-Offene Fragen und Motivation
-
-Der LL-Phänotyp in späteren Stadien zeigte Diskrepanzen mit dem aktuellen Modell der Rosettenbildung und der Rolle von Shroom3 während der LL-Entwicklung. Ein Aspekt der LL-Entwicklung, der immer noch unklar ist, sind die genauen Faktoren, die zur Ablagerung von Zellclustern führen. Die Verwendung der Shroom3-Mutanten als Modellsystem bietet ein großes Potenzial, neues Licht auf die Organogenese, das Zusammenspiel zwischen Morphogenese und zellulärer Spezifizierung, zu werfen.
-*** Übersetzt mit www.DeepL.com/Translator (kostenlose Version) ***
-
+Meine Ergebnisse und Methoden zeigen, wie wichtig die Morphologie für die Steuerung von Entwicklungsprozessen ist und wie eher kleine morphologische Veränderungen auf zellulärer Ebene die weitere Entwicklung maßgeblich beeinflussen können. Meine Arbeit zeigt auch, wie leistungsfähig die moderne Genetik, Bildgebung und Bildanalyse ist und wie vielfältig sie in Bezug auf die Bandbreite der Fragen ist, die sie beantworten kann. Die von mir entwickelten Methoden und Werkzeuge bilden die Grundlage für mindestens drei Viertel der von mir durchgeführten Analysen, und zusammen mit der Dokumentation und den Daten sind sie in hohem Maße reproduzierbar. Leider ist die Reproduzierbarkeit in vielen Publikationen kein Kernaspekt. Sie sollte aber bei _jeder_ Studie ein Hauptaugenmerk sein, denn die Reproduzierbarkeit ist das, was die wissenschaftlichen Ergebnisse absichert. In dieser Hinsicht freut es mich besonders, dass eine meiner Entwicklungen, eine verbesserte Probenvorbereitungsmethode, bereits von vielen verschiedenen Laboren auf der ganzen Welt eingesetzt wird und ihnen hilft, ihre Ergebnisse reproduzierbarer zu machen.
