--- a/01-chap1.Rmd
+++ b/01-chap1.Rmd
@@ -47,15 +47,13 @@ To communicate with each other, cells have developed a variety of intercellular 
 
 The word ‘WNT’ is a compound word of _Wingless_ and _Int-1_, both of which are important genes during development of _Drosophila melanogaster_ (commonly known as fruit fly), where WNT signaling was first studied. WNT is evolutionary conserved with 15 different receptors and co-receptors and plays a major role during embryonic axis formation, body segmentation, organogenesis and stem cell proliferation. Aberrant WNT signaling is involved in diseases like colon cancer, melanoma and neurodegenerative diseases [@Niehrs2012].
 
-Beside this, WNT signaling is sub-divided in a canonical ($\beta$-catenin^[catenins are regulators of cell-cell adhesion and gene transcription] dependent) and a non-canonical ($\beta$-catenin independent) branch. In canonical signaling, WNT ligand binds, together with co-receptor _Lipoprotein Receptor-related Protein 6_ (LRP6), to the receptor _Frizzled_ (Frz) – jointly activating protein _Dishevelled_ (Dsh). Dsh again inhibits a protein complex usually degrading $\beta$-catenin, leading to the stabilization of $\beta$-catenin in the cytoplasm and the nucleus. Within the nucleus, $\beta$-catenin forms a complex with Lef to activate specific target genes [@Niehrs2012].
+Beside this, WNT signaling is sub-divided in a canonical ($\beta$-catenin^[catenins are regulators of cell-cell adhesion and gene transcription] dependent) and a non-canonical ($\beta$-catenin independent) branch. In canonical signaling, WNT ligand binds, together with co-receptor _Lipoprotein Receptor-related Protein 6_ (LRP6), to the receptor _Frizzled_ (Frz) – jointly activating protein _Dishevelled_ (Dsh). Dsh again inhibits a protein complex usually degrading $\beta$-catenin, leading to the stabilization of $\beta$-catenin in the cytoplasm and the nucleus. Within the nucleus, $\beta$-catenin forms a complex with LEF/TCF to activate specific target genes [@Niehrs2012].
 
 #### Fibroblast Growth Factor {#intro-FGF}
 
 Key roles of _Fibroblast growth factor_ (FGF) signaling is mesoderm^[one of the earliest differentiating layer of cells. Cells of the mesoderm will e.g. form the musculature.] patterning in the early embryo, regulation of angiogenesis and wound repair. On a cellular level it is also an important regulator of proliferation and differentiation. The mammalian FGF family is comprised of 18 ligands and four highly conserved transmembrane tyrosine receptors named FGF receptor 1-4 (FGFR1-4). Aberrant FGF signaling is _e.g._ associated with tumor growth [@Turner2010].
 
-Upon ligand binding FGFR dimerizes and undergoes a conformational shift activating the intracellular kinase^[enzymes that transfer energy to specific substrates] domain. Subsequent trans-phosphorylation of tyrosine kinase domains serve as docking sites for adaptor proteins. Activated FGFR then phosphorylates FGFR substrate 2 (FRS2), recruiting adaptor protein _Son of Sevenless_ (SoS) and _Growth factor Receptor bound 2_ (GRb2) to set on a cascade of kinase dependent signal transduction eventually leading to activation of target genes involved in the regulation of e.g. proliferation, autophagy and EMT [@Turner2010].
-
-At least one developmental process requires a locally confined and very enriched source of signaling molecules. It was shown that rosette formation in the lateral line primordium (LLP) is an important morphological feature for a lumen to form on top of the rosette which, filled with FGF, acts as a locally enriched source of FGF signaling [@Durdu2014a].
+Upon ligand binding FGFR dimerizes and undergoes a conformational shift activating the intracellular kinase^[enzymes that transfer energy to specific substrates] domain. Subsequent trans-phosphorylation of tyrosine kinase domains serve as docking sites for adaptor proteins. Activated FGFR then phosphorylates FGFR substrate 2 (FRS2), recruiting adaptor protein _Son of Sevenless_ (SoS) and _Growth factor Receptor bound 2_ (GRb2) to set on a cascade of at least three possible kinase dependent signal transduction pathways eventually leading to activation of target genes involved in the regulation of e.g. proliferation, autophagy and EMT [@Turner2010].
 
 #### Notch {#intro-notch}
 
@@ -67,7 +65,7 @@ Notch signaling gives cells the ability to self-organize and controls various de
 1. there are no intermediates between membrane signaling and nucleus and therefore no amplification or dampening of the signal occurs
 2. signaling requires direct contact between cells, which makes Notch signaling particularly biased by features of cellular morphology and tissue organization [@Bray2016].
 
-Assuming a homogeneous receptor concentration in a cells membrane and since Notch signaling occurs at sites where cells are in contact, the signal generated is proportional to the contact area. Additionally, the strength of the signal increases further where cells are tightly opposed [@Bray2016; @Hunter2019; @Khait2016; @Shaya2017a].
+Assuming a homogeneous receptor concentration in a cell membrane and since Notch signaling occurs at sites where cells are in contact, the signal generated is proportional to the contact area. Additionally, the strength of the signal increases further where cells are tightly opposed [@Bray2016; @Hunter2019; @Khait2016; @Shaya2017a].
 
 ### Morphogenesis {#intro-morph}
 
@@ -75,9 +73,9 @@ Morphogenesis, from the Greek morphê (shape) and genesis (creation)
 
 >"Creation of the shape"
 
-For objects that fulfill a purpose, their form is an expression of their function^[Even though the expression Form follows function [@Davies1982] is usually found in design and architecture, it formulates the general idea that any objects form is (or in design should) be shaped by the requirements to it.]. Analyzing the shape of an object can give information about its function. It is therefore an important feature in different scientific disciples.
+For objects that fulfill a purpose, their form is an expression of their function^[Even though the expression Form follows function [@Davies1982] is usually found in design and architecture, it formulates the general idea that any objects form is (or in design should) be shaped by the requirements to it.]. Analyzing the shape of an object can give information about its function. It is therefore an important feature in different scientific disciplines.
 
-Breaking symmetry of daughter cells often results in diversification of shape. In order to form a tissue or an organ with a variety of specialized cells, it is important for the single cell to have information about where it is located, what its neighbors are doing, how densely it is packed and what the chemical composition of its surrounding is. This is accomplished by being in constant feedback with its neighbor cells and sensation of its environment. After the information got processed, the cell reacts by adjusting the levels of proteins expressed to undergo proliferation or develop specialized structures like cilia or axons.
+Breaking symmetry of daughter cells often results in one of the daughter cells adopting a different fate, which eventually results in diversification of shape (_e.g._ muscle cells, neural cells, _etc._). In order to form a tissue or an organ with a variety of specialized cells, it is important for the single cell to have information about where it is located, what its neighbors are doing, how densely it is packed and what the chemical composition of its surrounding is. This is accomplished by being in constant feedback with its neighbor cells and sensation of its environment. After the information got processed, the cell reacts by adjusting the levels of proteins expressed to undergo proliferation or develop specialized structures like cilia or axons.
 
 > “For an isolated cell, cell shape reflects a balance between cortical tension and intracellular pressure.” - Y.Pan _et al._[@Pan2016]
 
@@ -97,13 +95,13 @@ knitr::include_graphics("figures/intro/feedback.png")
 Cell shape changes may occur in two different ways...
 
 - active: Each cell has a dynamic skeleton that is composed of a complex matrix of interconnected proteins - the cytoskeleton. It is composed by three basic classes of filaments that have different physical properties. _Microtubules_ (the most rigid), _Intermediate_ and _micro-filaments_ (the softest). Motor-proteins like Myosin may adhere to actin micro-filaments and contract them, thereby causing e.g. a narrowing of the cells diameter.
-- passive: In a tissue cells are, besides their individual cyto-skeleta, connected supra-cellular _via_ actin through Adherens junctions. This way, if the tissue becomes deformed at one place, other more distant cells will get deformed as well [@Fletcher2010]. 
+- passive: In a tissue cells are, besides their individual cytoskeletal elements, connected at the supracellular level _via_ actin through Adherens junctions. This way, if the tissue becomes deformed at one place, other more distant cells will get deformed as well [@Fletcher2010]. 
 
 #### Apical Constriction
 
 Apical constriction (AC) is a cell morphogenetic process manifest by an active narrowing of the apical surface, making an epithelial cell appear bottle or wedge shaped instead of cuboidal. It is usually coordinated by multiple cells within an epithelial layer that raise forces necessary to deform a tissue.
 
-A defining feature of epithelial cells is they have a basal- (bottom) to apical (top) polarity. At the basal side, the cell is in contact with the extracellular matrix (ECM, a thin sheet-like structure called basement membrane) apically the cell forms tight connections to its neighboring cells – a region called the apical junctional complex (AJC). The AJC encompasses three types of junctions: Adherent junctions (AJ) or zonula adherens (ZA), tight junctions (TJ) and desmosomes. Around the ZA dense cables of actomyosin are located that, analog to muscle sarcomeres, are able to contract upon Ras homolog family member (Rho) activation of RHO‑associated protein kinase (Rock) and Rock mediated phosphorylation of the motor protein non-muscle myosin II (NMII) [@StJohnston2011]. While in invertebrates cells are radially organized and RhoA and ROCK have a medioapical focus with RhoA also present at junctions, in vertebrates cells exhibit a planar cell polarity and RhoGEF and ROCK are localized to junctions [@Martin2014].
+A defining feature of epithelial cells is that they have a basal- (bottom) to apical (top) polarity. At the basal side, the cell is in contact with a variant of extracellular matrix (ECM, a thin sheet-like structure) called the basement membrane, apically the cell forms tight connections to its neighboring cells – a region called the apical junctional complex (AJC). The AJC encompasses three types of junctions: Adherent junctions (AJ) or zonula adherens (ZA), tight junctions (TJ) and desmosomes. Around the ZA dense cables of actomyosin are located that, analog to muscle sarcomeres, are able to contract upon activation of RHO‑associated protein kinase (Rock) and Rock mediated phosphorylation of the motor protein non-muscle myosin II (NMII) [@StJohnston2011]. While in invertebrates cells (as shown in Drosophila [@Martin2014]) are radially organized and RhoA and ROCK have a medioapical focus with RhoA also present at junctions, in vertebrates cells exhibit a planar cell polarity and RhoGEF and ROCK are localized to junctions.
 
 Developmental processes that involve AC are...
 
@@ -112,9 +110,9 @@ Developmental processes that involve AC are...
 - Gastrulation
 - Healing and sealing of embryonic tissue
 
-Epithelial rosettes are radially organized cell clusters within an epithelial tissue whose vertices interface a common center similar to a garlic bud or a pie cut into pieces along its center. While the mechanisms of cytoskeletal rearrangements seem to be well conserved, the extracellular cues that lead to rosette formation are less well understood and more diverse.
+Epithelial rosettes are radially organized cell clusters within an epithelial tissue whose vertices interface a common center similar to a garlic bud or a pie cut into pieces along its center. While the mechanisms of cytoskeletal rearrangements seem to be well conserved, the signals that lead to rosette formation are less well understood and more diverse.
 At least two architectural distinct types of rosettes exist, depending on the tissues polarization. 
-First, in a planar polarized tissue, several cells converge at a central apico-basal line with no shrinkage of the apical surface to form a cylindrical structure (like a pie cut into $\geq$ 4) (figure \@ref(fig:constr)B). Such rosettes are usually observed during tissue elongation and rather short-lived. In a second scenario, cells converge to a central apical point through AC (figure \@ref(fig:constr)A). This type of rosette is more long-lived and usually does not resolve but already represents a morphologically pre-mature state of the organ to be formed [@Harding2014b].
+First, in a planar polarized tissue, several cells converge at a central apico-basal line where cells go from a square to a more triangular shape to form a cylindrical structure (like a pie cut into $\geq$ 4) (figure \@ref(fig:constr)B). Such rosettes are usually observed during tissue elongation and rather short-lived. In a second scenario, cells converge to a central apical point through AC (figure \@ref(fig:constr)A). This type of rosette is more long-lived and usually does not resolve but already represents a morphologically pre-mature state of the organ to be formed [@Harding2014b].
 
 (ref:constr) Modes of constriction. **A** Cells converge to a central apical point **B** Cells converge at a central apico-basal line.
 
@@ -138,7 +136,7 @@ knitr::include_graphics("figures/intro/CM_fish.png")
 
 ### Developmental Stages
 
-A single female may lay 100 fertilized eggs per week. Each Zygote^[first diploid cell after fertilization between two germ cells] then undergoes the first zygotic cell cycle (**at ~ 0.75 h**). The following two to seven cell cycles (period: _Cleavage_, **at ~ 2.25 h**) occur directed and synchronous every ~15 min. Cells in this stage are called _blastomeres_, are incompletely separated from the yolk and remain interconnected by cytoplasmic bridges. The _Blastula_ period (**up to 5.25 h**) is determined by increasingly asynchronous division, flattening of the blastoderm _via_ cell intercalation and lengthening of the cell cycle. This period is also marked by the onset of _epiboly_, the period when cells in late blastula start to dome while a monolayer of the domes circumfence begins to wrap around the Yolk [@Kimmel1995a].
+A single female may lay 100 eggs per week. Each Zygote^[first diploid cell after fertilization] then undergoes the first zygotic cell cycle (**at ~ 0.75 h**). The following two to seven cell cycles (period: _Cleavage_, **at ~ 2.25 h**) occur directed and synchronous every ~15 min. Cells in this stage are called _blastomeres_, are incompletely separated from the yolk and remain interconnected by cytoplasmic bridges. The _Blastula_ period (**up to 5.25 h**) is determined by increasingly asynchronous division, flattening of the blastoderm _via_ cell intercalation and lengthening of the cell cycle. This period is also marked by the onset of _epiboly_, the period when cells in late blastula start to dome while a monolayer of the domes circumfence begins to wrap around the Yolk [@Kimmel1995a].
 
 After Blastula and **until 10 h** the _Gastrula_ period takes place, followed by the _Segmentation_ period (**until 24 h**). Both of which are depicted in more detail in figure \@ref(fig:stages). At even later stages the embryo starts to elongate posteriorly, grow and develop organs until it first active muscle are present and it starts to swim (figure \@ref(fig:stages)). 
 
@@ -158,7 +156,7 @@ The lateral line (LL) system is a mechano-sensory organ that is common to all aq
 knitr::include_graphics("figures/intro/ll_system.jpg")
 ```
 
-Each NM is first deposited as a premature cluster of about 30 cells from a migrating cell-aggregate called the posterior lateral line primordium (pLLP) \@ref(fig:llgfp)A. The pLLP delaminates from the pLL placode, caudal to the otic vesicle (figure \@ref(fig:llgfp)B) at around 20 _hours post fertilization_ (hpf) as a group of ~100 cells. After formation of a mesenchymal-like leading region, it starts migrating along a chemokine gradient positioned at the horizontal myoseptum to the tip of the tail (figure \@ref(fig:pLLP)) [@Chitnis2012a; @Ghysen2007a]. To ensure the development of a functional organ, several fundamental biological processes like cell migration, morphogenesis, proliferation and cell polarization need to be integrated into the pLLP. 
+Each NM is first deposited as a premature cluster of about 30 cells from a migrating cell-aggregate called the posterior lateral line primordium (pLLP) (figure \@ref(fig:llgfp)A). The pLLP delaminates from the pLL placode, caudal to the otic vesicle (figure \@ref(fig:llgfp)B) at around 20 _hours post fertilization_ (hpf) as a group of ~100 cells. After formation of a mesenchymal-like leading region, it starts migrating along a chemokine gradient positioned at the horizontal myoseptum to the tip of the tail [@Chitnis2012a; @Ghysen2007a]. To ensure the development of a functional organ, several fundamental biological processes like cell migration, morphogenesis, proliferation and cell polarization need to be integrated into the pLLP. 
 An important breakthrough in LL research has been the development of a transgenic line expressing a membrane tethered GFP fusion protein (lyn-GFP) that is expressed under the LL specific promotor of _cldnb_ (claudin b^[construct name: _Tg(-8.0cldnb:lynGFP)_; ZFIN ID: ZDB-TGCONSTRCT-070117-15]) [@Haas2006c], which allows for a much more detailed view and to observe lateral line development _in vivo_. An example of the fluorescence signal visible at ~60 hpf can be seen in figure \@ref(fig:llgfp)B.
 
 (ref:llgfp) Neuromast deposition and pattern. **A** Scheme showing NM deposition over three timepoints (10 min. interval). Dotted lines are time-tracks of rosettes, which become more concentrated over time. Bottom arrow indicates regions of rosette formation, maturation and deposition within the pLLP (scale bar = 20 µm; 20X WI; ~20 Z-planes; 2.5 µm spacing. MaxIP. Colors inverted.) **B** Scheme showing the lateral line at end of migration (~60 hpf) and other parts visible through the cldnb:lyn-gfp transgene (as documented through zfin.org) (air objective + 1.5X tube lens; four tiles; ~20 Z-planes; 5 µm spacing. MaxIP. Colors inverted).
@@ -167,14 +165,15 @@ An important breakthrough in LL research has been the development of a transgeni
 knitr::include_graphics('figures/intro/ll_gfp.jpg')
 ```
 
-
 ### Posterior Lateral Line Primordium
 
 The pLLP is about 100-150 $\mu$m in length (depending on deposition cycle) over which it exhibits a diverse surface topology and cellular morphology. Previous research found that the _caudal_ (also _posterior_), more mesenchymal cells, are leading the path of migration, while the _cranial_ (also _anterior_), more epithelial cells, are trailing. Towards the leading region the cells are more flat, towards the trailing region the cells become more columnar and increasingly radially organized into formations called epithelial rosettes. During migration the pLLP typically contains 2-3 _rosettes_ (~25-30 cells each), while the most trailing one will eventually be deposited to further mature to a functional NM [@Chitnis2012a; @Harding2014a]. Every deposition comes with a loss of cells in the pLLP, but this loss is partially compensated by proliferation during migration. While one study concludes a general spatial heterogeneity in distribution of proliferative cells [@Laguerre2009a], another one suggests a higher proliferative rate specifically near the leading region [@Nechiporuk2008].
 
 #### Rosette formation
 
-The onset of morphological and functional changes is determined by signaling of FGF, which is mostly active in the trailing region. Causal for expression of FGF is a signaling center of WNT in the leading region, which promotes expression of FGF ligands _FGF-3_ and _-10_ [@Aman2008]. Those ligands then diffuse to the trailing domain where binding through _FGF receptor 1_ (FGFR1) triggers a signaling cascade through which the cells become more columnar, apically constricted and eventually re-organize into epithelial rosettes [@Hava2009; @Lecaudey2008a; @Nechiporuk2008]. Concurrently, cells of the Wnt signaling center themselves are not competent to FGF signaling, which is achieved through expression of _Sef_, an intracellular antagonist to FGFR1 signaling [@Tsang].
+The onset of morphological and functional changes is determined by signaling of FGF, which is mostly active in the trailing region. Causal for expression of FGF is a signaling center of WNT in the leading region, which promotes expression of FGF ligands _Fgf-3_ and _-10_ [@Aman2008]. Those ligands then diffuse to the trailing domain where binding through _FGF receptor 1_ (Fgfr1) triggers a signaling cascade through which the cells become more columnar, apically constricted and eventually re-organize into epithelial rosettes [@Hava2009; @Lecaudey2008a; @Nechiporuk2008]. Concurrently, cells of the WNT signaling center themselves are not competent to FGF signaling, which is achieved through expression of _Sef_, an intracellular antagonist to Fgfr1 signaling [@Tsang].
+
+It was shown that rosette formation in the lateral line primordium (LLP) is an important morphological feature for a lumen to form on top of the rosette which, filled with FGF, acts as a locally enriched source of FGF signaling [@Durdu2014a].
 
 #### Hair cell specification {#intro-atoh}
 
@@ -184,14 +183,14 @@ The current model suggests that
 
 1. FGF initiates expression of _atoh1a_ and _deltaA_, where DeltaA activates Notch in neighboring cells to inhibit expression of _atoh1a_ in those. 
 2. Atoh1a in turn suppresses competence for FGF and initiates expression of _atoh1b_ and _deltaD_ which act synergistically with DeltaA in the center cell of the forming rosette. 
-3. While the latter acts synergistic with DeltaA, Atoh1b again drives expression of _atoh1a_ [@Matsuda2010b]. 
-4. Once a prospective HC is specified it will itself become a source for FGF-10. By this process adjacent cells are laterally inhibited and determined _support cells_ (figure \@ref(fig:llsystem)B), still capable of receiving FGF signals _via_ FGFR1.
+3. While the latter acts synergistic with DeltaA, Atoh1b in turn drives expression of _atoh1a_ [@Matsuda2010b]. 
+4. Once a prospective HC is specified it will itself become a source for Fgf-10. By this process adjacent cells are laterally inhibited and determined as _support cells_ (figure \@ref(fig:llsystem)B), still capable of receiving FGF signals _via_ Fgfr1.
 
 Just before the most trailing rosette is deposited, its prospective HC will undergo a final division to form a doublet of sensory HCs [@Mirkovic2012; @Rouse1991].
 
 ### Shroom3 in the pLLP
 
-The Shroom protein family is conserved through evolution (figure \@ref(fig:suppshrmort)) and involved in contraction of the actomyosin network (e.g. during AC), which has been confirmed in several studies investigating _e.g._ epithelial planar remodeling, neural tube morphogenesis and _Xenopus_ bottle cells [@Das2014a; @Hildebrand2005; @Hildebrand1999a; @Lee2007; @Nishimura2008; @Plageman2011].
+The Shroom protein family is mostly conserved through animal evolution (figure \@ref(fig:suppshrmort)) and involved in contraction of the actomyosin network (e.g. during AC), which has been confirmed in several studies investigating _e.g._ epithelial planar remodeling, neural tube morphogenesis and _Xenopus_ bottle cells [@Das2014a; @Hildebrand2005; @Hildebrand1999a; @Lee2007; @Nishimura2008; @Plageman2011].
 
 #### Recent research {#intro-shroom}
 
@@ -203,10 +202,10 @@ Shroom proteins have three characteristic domains (1) a _PDZ_ domain close to th
 knitr::include_graphics("figures/intro/shrm3_interaction.png")
 ```
 
-While in all of the above-mentioned studies Shroom3 was the focus of interest, in zebrafish and most other model organisms there are four paralogs. A previous study performed by a lab-mate done on Shroom3 morphants in _D.rerio_ [@Ernst2012a] indicates that Shroom3 is also necessary for AC and rosette formation in the migrating pLLP. In summary she was able to show and that...
+While in all of the above-mentioned studies Shroom3 was the focus of interest, in zebrafish and most other model organisms there are four paralogs. A previous study performed by a lab-mate done on Shroom3 morphants in _D.rerio_ [@Ernst2012a] indicates that Shroom3 is also necessary for AC and rosette formation in the migrating pLLP. In summary she was able to show that...
 
 1. Shroom3 is expressed in the pLLP from stages 24 – 48 hpf.
-2. _shroom3_ is expressed downstream of FGF signaling, which was confirmed via treatment with an FGFR1 inhibiting drug. Subsequent ISH with the Probe used before showed that the signal was gone in Morpholino (MO) injected embryos. The drug used has been used before (SU5402) in the same context [@Lecaudey2008a; @Nechiporuk2008]. In these it was found that SU5402 has the ability to prevent rosette formation, but not to dismantle already established ones.
+2. _shroom3_ is expressed downstream of FGF signaling, which was shown _via_ treatment with an Fgfr inhibiting drug. Subsequent ISH with the Probe used before showed that the signal was gone in Morpholino (MO) injected embryos. The drug used has been used before (SU5402) in the same context [@Lecaudey2008a; @Nechiporuk2008]. In these it was found that SU5402 has the ability to prevent rosette formation, but not to dismantle already established ones.
 3. Shroom3 localizes to rosette centers, which was accomplished by inserting a genetic construct where a _shroom3-tagRFP_ fusion protein is expressed under the control of a heat-shock^[heat shock proteins are _Escherichia coli_ enzymes that assist protein folding and are heat activated] promotor into a _cldnb:lyn-GFP_ transgenic line. This way they were able to ectopically express _shroom3-tRFP_ and confirm its localization by confocal fluorescence microscopy (figure \@ref(fig:shrmernst)A).
 4. Rosette formation is impaired in MO injected embryos, which was confirmed quantitatively by using a specifically trained _rosette detector_ [@Liu] to count and weight single rosettes. As a metric to compare whole pLLPs the sum of weights as in $\sum_{i=1}^{i-n}{weighted\ detections}$ was used (figure \@ref(fig:shrmernst)B-B' and Materials and Methods section \@ref(CNN))
 
