--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -50,27 +50,53 @@ The model used for rosette detection is a discriminative one. During the course 
 
 Till end of migration, on average two additional CCs are deposited in _shroom3_-\- embryos. Proliferation is not increased in the pLLP - but in CCs once they are deposited (section \@ref(res-prolpllp)) reaching at ~ 2 dpf wild-type levels of cells _per_ area. Therefore the increase in CC count is unrelated to the amount of proliferation in the pLLP. While I did not quantify the size of CCs directly after deposition, it seems likely that the observation of an increase in proliferation after CCs are deposited is due to a compensatory effect. Interestingly, there are reports showing an _inexhaustable_ hair cell generation [@Pinto-Teixeira2015] which seems to be triggered by an interaction between WNT and Notch Pathways [@Romero-Carvajal2015; @Head2013; @Wada2013]. The cell count and area per CC show an average reduction of 6$\%$ respectively and no difference in density (section \@ref(res-llmorph)).
 
+```{conjecture, echo = TRUE}
+The increase in deposited cell clusters is independent of proliferation
+```
+
 As shown before [@Nishimura2008; @Ernst2012a; @Plageman2011] the _shroom3_-\- LL phenotype can be mimicked by inhibition of Rock. With our methods we were able to reproduce these results, leading to the conclusion that Rock is necessary for proper rosette assembly and CC deposition. However, since Rock and NMII action are needed in many developmental processes, modification of Rock activity means interfering with various developmental processes. Therefore, other unforseen interactions are possible. End of migration analysis also shows that the average length of the LL does not differ, suggesting that speed is not affected. This is confirmed by time-lapse analysis, which neither shows a difference in speed of migration, nor in acceleration (results, \@ref(fig:rdtreg)).
 
 ### Rosette Formation
 
-One of the most important and most interesting results of my work is the correlation between rosettiness and CC count as it clearly shows the interdependence between a high median rosettiness and low number of deposited CCs and _vice versa_ - therefore highlighting the role of Shroom3 as a stabilizing factor during NM formation. 
+One of the most important and most interesting results of my work is the correlation between rosettiness and CC count as it clearly shows the interdependence between a high median rosettiness and low number of deposited CCs and _vice versa_ - therefore highlighting the role of Shroom3 as a stabilizing factor during NM formation. To get these results, the essential steps in this study were (1) live imaging (2) and to join the datasets of three different analyses conducted on the same image data.
 
-To get these results, the essential steps in this study were (1) live imaging (2) and to join the datasets of three different analyses conducted on the same image data. While the CC count can be derived from images of the LL at end of migration, the rosettiness at this timepoint can not be measured anymore since the pLLP disperses into three terminal NMs. Likewise, the rosettiness can be measured in images during migration - but the final CC count is only revealed at end of migration. One possible solution to this is to first take single timepoint images of the pLLP during migration, leave the embryos embedded in agarose while incubating them till end of migration, and then image them again at end of migration to derive the CC count. While this way one can image more emrbyos, one only obtains a single measurement for a single timepoint - making the statistics much poorer. This is mostly due to the measurement of rosettiness. As explained, the result of the _weight_ from the rosette detector does not exactly depict a linear relationship between 0 - no rosette and 1 - perfect rosette. Therefore the variance in measurements may be quite high. Taking however the median of a series of rosettiness measurements from the same pLLP reduces this error. Additionally this kind of procedure produces a number of other useful measurements like speed and acceleration, pLLP area and roundness that may be subject to investigate possible interdependencies.
+```{conjecture, echo = TRUE}
+The increase in deposited cell clusters is due to a reduction in rosettiness 
+```
 
-As figure \@ref(rdtreg)B-B' shows, the method allows to measure speed and acceleration quite accurarely (as indicated by the standard error). Especially for that time scale, there are no reports where researchers were able to successfully derive these measurements - even though it was long known that phases of acceleration and deceleration existed [@Ghysen2007a]. One of our hypothesis was that the higher number of CCs may be related to phases of acceleration, since here cells within CCs would get stretched more which in absence of Shroom3 may lead to a more easy and therefore more frequent deposition of CCs. However, when observing the timing of CC deposition or correlation with rosettiness, we find nothing to confirm this theory. 
+While the CC count can be derived from images of the LL at end of migration, the rosettiness at this timepoint can not be measured anymore since the pLLP disperses into three terminal NMs. Likewise, the rosettiness can be measured in images during migration - but the final CC count is only revealed at end of migration. One possible solution to this is to first take single timepoint images of the pLLP during migration, leave the embryos embedded in agarose while incubating them till end of migration, and then image them again at end of migration to derive the CC count. While this way one can image more emrbyos, one only obtains a single measurement for a single timepoint - making the statistics much poorer. This is mostly due to the measurement of rosettiness. As explained, the result of the _weight_ from the rosette detector does not exactly depict a linear relationship between 0 - no rosette and 1 - perfect rosette. Therefore the variance in measurements may be quite high. Taking however the median of a series of rosettiness measurements from the same pLLP reduces this error. Additionally this kind of procedure produces a number of other useful measurements like speed and acceleration, pLLP area and roundness that may be subject to investigate possible interdependencies.
+
+As figure \@ref(fig:rdtreg)B-B' shows, the method allows to measure speed and acceleration quite accurately (as indicated by the standard error). Especially for that time scale, there are no reports where researchers were able to successfully derive these measurements - even though it was long known that phases of acceleration and deceleration existed [@Ghysen2007a]. One of our hypothesis was that the higher number of CCs may be related to phases of acceleration, since here cells within CCs would get stretched more which in absence of Shroom3 may lead to a more easy and therefore more frequent deposition of CCs. However, when observing the timing of CC deposition or correlation with rosettiness, we find nothing to confirm this theory. 
 
 ### Apical Constriction
 
-The main learning from the quantification of the apical index is that it is far from easy not only to accurately quantify a single cell 3D morphometric feature, but also to interpret it. The main findings from this study are that (1) the difference in A.I. is more pronounced along the major than the minor. For recap, the A.I. is lateral height over the respective fit ellipsoid axis of a cells cross-section at a relative distance from the apex (section \@ref(ACI-param)). If the lateral height was 5 $\mu$m and major / minor were 2 / 1 $\mu$m, then the A.I. major was 2.5 and the A.I. minor 5. The inversion of values represents the reality, where the minor axis is more constricted than the major axis. The axes however do not reflect a specific body axis (anterior - posterior or dorsal - ventral), but essentially the longer (major) and the shorter (minor) axis. If the reduction in A.I. in _shroom3_-/- embryos would occur uniformly we would expect an equal amount of reduction as compared to _shroom3_++ conrols, which they don't. In essence this means that
+The main learning from the quantification of the apical index is that it is far from easy not only to accurately quantify a single cell 3D morphometric feature, but also to interpret it.
 
-and (2) the angle.
+#### Apical Index
+
+The main findings from this study are that the difference in A.I. is more pronounced along the major than the minor. For recap, the A.I. is lateral height over the respective fit ellipsoid axis of a cells cross-section at a relative distance from the apex (section \@ref(ACI-param)). If the lateral height was 5 $\mu$m and major / minor were 2 / 1 $\mu$m, then the A.I. major was 2.5 and the A.I. minor 5. The inversion of values represents the reality, where the minor axis is more constricted than the major axis. The axes however do not reflect a specific body axis (anterior - posterior or dorsal - ventral), but essentially the longer (major) and the shorter (minor) axis. If the reduction in A.I. in _shroom3_-/- embryos would occur isotropically we would expect an equal amount of reduction as compared to _shroom3_++ conrols. At 32 hpf we see about a 10$\%$ reduction in both the major and the minor, while at the later stages of 36 and 40 hpf we see a stronger reduction in the major only (section \@ref(res-ai)). A main difference between the earliest stage and the later ones is the speed of migration, which reaches its maximum at around 36 - 40 hpf (section \@ref(res-rosreg)). Therefore one possible explanation could be that at lower speed of migration A.I. is reduced isotropically, while at higher speeds the cells are stretched more strongly along the axis parallel to the direction of migration. Interestingly, this explanation would also concur with a study by Kozlovskaja-Gumbrienė _at al._ [@Kozlovskaja-Gumbriene2017], who report Shroom3 independent rosette formation at early stages and active Notch signaling. 
+
+```{conjecture, echo = TRUE}
+The reduction in apical constriction is an-isotropic. The an-isotropicity may be related to speed of migration.
+```
+
+#### Cell orientation
+
+The second finding is the difference in cell radial orientation. A rosette can be divided in four quadrants of 0 - 90$^\circ$, where 0$^\circ$ represents the anterior - posterior axis (section \@ref(res-rosreg)A'). The measurement taken represents the angle between the ellipse major axis and the horizon, which is oriented along the pLLPs horizontal midline. Interestingly, the results show an increase in cell count in cells oriented along the horizontal midline in _shroom3_-\- embryos which suggests a shift of organ morphology from a radial to a more wedge like shape (section \@ref(sum-ai)). Since a wedge is also anisotropically apically contricted, this is also in line with the first results. In the range of 30 - 45$^\circ$ we see the opposite ratio, where now the count of cells in _shroom3_-\- embryos is reduced. Naturally, the cells oriented is this direction have to stretch the most to apically bind to the rosette center. Again, this results are in favor of the theory that Shroom3 acts as a stabilizer against cell stretching and maintenance of radial cell arrangements under extreme conditions.
+
+```{conjecture, echo = TRUE}
+Organ morphology shifts from a radial, to a more wedge-like shape.
+```
 
 ### Hair Cell specification
 
-In the pLLP, Notch signaling is important for selection and specification of hair-cells (section \@ref(intro-notch)). Interestingly, our findings are supported by another study where it was shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 [@Kozlovskaja-Gumbriene2017]. For our observation this could mean that (1) either expression of _atoh1a_ is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been reported [@Shaya2017a]. For the latter, the proposed model would be that in each micro-rosette the HC is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of _atoh1a_ and ultimately to premature CC deposition.
+In the pLLP, Notch signaling is important for selection and specification of hair-cells (section \@ref(intro-notch)). Interestingly, our findings are supported by another study where it was shown that upon over-activated Notch signaling, rosette formation and CC deposition happened independent of Shroom3 [@Kozlovskaja-Gumbriene2017]. For our observation this could mean that (1) either expression of _atoh1a_ is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to a bias in Notch signaling. A phenomenon that in fact has been reported [@Shaya2017a]. For the latter, the proposed model would be that in each micro-rosette the HC is in contact with less cells due to a more wedge-like organ morphology, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of _atoh1a_ and ultimately to premature CC deposition.
 
-Even though the dataset for hair-cell specification provides a solid base for hypothesis testing, the count of Atoh1a expressing cells shows only a relatively low significance difference. This could be attributed to the large variance in measurements. However, the same dataset not also shows an earlier activity of the _atoh1a_ promotor, which is independent of cell count and makes the results more trustworthy. Furthermore, the control experiment of rescuing the _shroom3_-\- phenotype of more deposited CCs _via_ an _atoh1a_ knockdown shows that neither in _shroom3_-\- nor in _shroom3_++ embryos the first NM is deposited anymore revealing a possibly novel role for Atoh1a that has not been reported before. Arguing - in theory - for an Atoh1a dependent mechanism of CC deposition. Furthermore, even though an MO for p53 was co-injected, MO injection has been shown to potentially have many more unspecific effects due to the high concentrations usually injected [@Schulte-Merker2014c]. For this reason double mutants ( _shroom3_-\-; _atoh1a_-\-) were generated - which at this timepoints are not analyzed yet.
+```{conjecture, echo = TRUE}
+Expression of atoh1a appears pre-mature and more frequent
+```
+
+Even though the dataset for hair-cell specification provides a solid base for hypothesis testing, the count of Atoh1a expressing cells shows only a relatively low significance difference. This could be attributed to an imprecision in measurements. However, the same dataset also shows an earlier activity of the _atoh1a_ promotor \@ref(fig:hctl)B-C, which is independent of cell count and makes the results more trustworthy. Furthermore, the control experiment of rescuing the _shroom3_-\- phenotype of more deposited CCs _via_ an _atoh1a_ knockdown shows that neither in _shroom3_-\- nor in _shroom3_++ embryos the first NM is deposited anymore revealing a possibly novel role for Atoh1a that has not been reported before. Arguing - in theory - for an Atoh1a dependent mechanism of CC deposition. Furthermore, even though an MO for p53 was co-injected, MO injection has been shown to potentially have many more unspecific effects due to the high concentrations usually injected [@Schulte-Merker2014c]. For this reason double mutants ( _shroom3_-\-; _atoh1a_-\-) were generated - which at this timepoints are not analyzed yet.
 
 ### Model
 
